# network_scan

./: .bandit  .flake8  .gitignore  CHANGELOG.md  CI_CD_GUIDE.md  DOCKER.md  Dockerfile  FINAL_CI_FIX.md  GIT_COMMANDS.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  cache_manager.py  compression_manager.py  config.py  config.yaml  docker-build.sh  docker-compose.simple.yml  docker-compose.yml  main.py  mypy.ini  network_scanner.py  pyproject.toml  report_generator.py  requirements.txt  retry_manager.py  run_tests.py  screenshot_manager.py  stream_processor.py  web.py
.github/: description.md  topics.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  python-app.yml
docs/: BUGFIXES.md  GITHUB_SETUP.md  GITHUB_UPLOAD.md  HTML_REPORT_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS.md  RESOURCE_LIMITS.md  TASK_MANAGEMENT.md  THREAD_CONFIGURATION.md  TWO_STAGE_SCANNING.md
scripts/: task_cli.py  task_monitor.py
src/: README.md  __init__.py  cache_manager.py  cleanup_manager.py  network_scanner.py  report_generator.py  resource_monitor.py  scanner_logger.py  screenshot_manager.py  stream_processor.py  system_analyzer.py  task_manager.py  task_web.py
static/: style.css
templates/: help.html  index.html
tests/: test_basic.py  test_improved_detection.py  test_ip_devices.py  test_json_export.py  test_main.py  test_optimized.py  test_os_detection.py  test_scanner.py  test_sip_fix.py  test_sip_fix_v2.py  test_snmp.py  test_task_manager.py
